AUTOMAKE_OPTIONS = foreign

bin_PROGRAMS = dvanalyzer
dvanalyzer_SOURCES = \
    ../../../Source/CLI/CLI_Main.cpp \
    ../../../Source/CLI/CommandLine_Parser.cpp \
    ../../../Source/Common/Help.cpp \
    ../../../Source/Common/Core.cpp

#dvanalyzer_LDFLAGS     = -no-undefined -version-info 0:0:0

INCLUDES = -I../../../Source -I../../../../MediaInfoLib/Source -I../../../../ZenLib/Source