AUTOMAKE_OPTIONS = foreign

bin_PROGRAMS = dvanalyzer-gui
dvanalyzer_gui_SOURCES = \
    ../../../Source/Common/Common_About.cpp \
    ../../../Source/Common/Common_Help.cpp \
    ../../../Source/Common/Core.cpp \
    ../../../Source/GUI/Qt/App.cpp \
    ../../../Source/GUI/Qt/GUI_About.cpp \
    ../../../Source/GUI/Qt/GUI_Help_ByFrame.cpp \
    ../../../Source/GUI/Qt/GUI_Help_Summary.cpp \
    ../../../Source/GUI/Qt/GUI_Main.cpp \
    ../../../Source/GUI/Qt/GUI_Main_ByFrame_Table.cpp \
    ../../../Source/GUI/Qt/GUI_Main_ByFrame_Text.cpp \
    ../../../Source/GUI/Qt/GUI_Main_FCPv4.cpp \
    ../../../Source/GUI/Qt/GUI_Main_FCPv5.cpp \
    ../../../Source/GUI/Qt/GUI_Main_MediaInfo.cpp \
    ../../../Source/GUI/Qt/GUI_Main_Menu.cpp \
    ../../../Source/GUI/Qt/GUI_Main_Summary.cpp \
    ../../../Source/GUI/Qt/GUI_Main_XML.cpp \
    _Automated/moc_GUI_About.cpp \
    _Automated/moc_GUI_Main.cpp \
    _Automated/moc_GUI_Help_ByFrame.cpp \
    _Automated/moc_GUI_Help_Summary.cpp \
    _Automated/moc_GUI_Main_ByFrame_Table.cpp \
    _Automated/moc_GUI_Main_ByFrame_Text.cpp \
    _Automated/moc_GUI_Main_FCPv4.cpp \
    _Automated/moc_GUI_Main_FCPv5.cpp \
    _Automated/moc_GUI_Main_MediaInfo.cpp \
    _Automated/moc_GUI_Main_Summary.cpp \
    _Automated/moc_GUI_Main_XML.cpp \
    _Automated/qrc_GUI_Main.cpp

#dvanalyzer-gui_LDFLAGS     = -no-undefined -version-info 0:0:0

INCLUDES = -I../../../Source -I../../../../MediaInfoLib/Source -I../../../../ZenLib/Source